src/objects/Customer_References__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer References</relationshipLabel>
        <relationshipName>Customer_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Release_Date__c</fullName>
        <label>Actual Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Customer References</relationshipLabel>
        <relationshipName>Customer_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Draft_First_Sent_to_Customer__c</fullName>
        <label>Date Draft First Sent to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer References</relationshipLabel>
        <relationshipName>Customer_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer References</relationshipLabel>
        <relationshipName>Customer_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Level__c</fullName>
        <label>Reference Level</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Type_Other__c</fullName>
        <label>Reference Type - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Type__c</fullName>
        <label>Reference Type</label>
        <picklist>
            <controllingField>Reference_Level__c</controllingField>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study-ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study-Selection Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR-Mention/Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR-New Win Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR-Full Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other-Guest Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other-Community Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_References1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Use_Case__c</fullName>
        <label>Special Use Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>Reference_Type__c</controllingField>
            <picklistValues>
                <fullName>Done/published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved/In Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With customer for approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursuing/Go-Ahead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted relationship owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner to be assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_References2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <label>Customer References</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Type__c</columns>
        <columns>Reference_Level__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer References Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>